--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,67 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button{
+  position: relative;
+  padding: 20px 40px;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  border-radius: 40px;
+  border: none;
+  margin: 10px;
+  width: 200px;
+
+}
+button span{
+  position: relative;
+  color:#000;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 7px;
+  z-index: 1;
+  font-size: 20px;
+}
+button .liquid{
+  position: absolute;
+  top:-80px;
+  left: 0;
+  width:100%;
+  height: 200px; 
+  background:white;
+  box-shadow: inset 0 0 50px rgba(0,0,0,0.5);
+  transition: .5s;
+}
+button .liquid::after,
+button.liquid::before{
+  content:'';
+  width:200%;
+  height:200%;
+  position: absolute;
+  top: 0;
+  left:50%;
+  transform: translate(-50%,-75%);
+  background: yellow;
+}
+button .liquid::before{
+  border-radius: 45%;
+  background-color: rgba(20,20,20,1);
+  animation: wave  5s linear infinite;
+}
+button .liquid::after{
+  border-radius: 40%;
+  background-color: rgba(20,20,20,0.5);
+  animation: wave 10s linear infinite;
+}
+button:hover .liquid{
+  top: -120px;
+}
+
+@keyframes wave{
+  0% {
+    transform: translate(-50%,-75%)rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translate(-50%,-75%)rotate(0deg);
   }
 }
